clang/test/BSC/Negative/OwnedStruct/uninitialized/owned-struct-return.cbs
// RUN: %clang_cc1 -verify %s
owned struct A {  
   public:
   int x;
   int y ;
  ~A(A this){
  }
};                       
A foo(){
   A a;
   a.x = 1; // expected-error {{assign to part of uninitialized value: `a`}}
   return a; // expected-error {{use of uninitialized value: `a`}}
}

int main() {
   return 0;
}
